--- a/src/components/likebutton/LikeButton.css
+++ b/src/components/likebutton/LikeButton.css
@@ -6,14 +6,10 @@
     z-index: 1;
 }
 
-.post-like-container-i {
+.post-like-container-icon {
     width: 100%;
     height: 100%;
-    color: var(--ALERT);
     cursor: pointer;
     transition: var(--transition);
-}
-
-.post-like-container-i:hover {
-    color: var(--SECONDARY_900);
+    color: var(--ALERT);
 }
