--- a/src/routes/profile/Profile.css
+++ b/src/routes/profile/Profile.css
@@ -32,7 +32,6 @@
     color: var(--SECONDARY_800);
 }
 
-.profile-container {}
 
 .img-background {
     background-color: var(--PRIMARY_600);
@@ -43,6 +42,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.img-background img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
 }
 
 .avatar {
