--- a/src/components/post/Post.css
+++ b/src/components/post/Post.css
@@ -43,7 +43,7 @@
 /* --------end of header---------- */
 
 .post-container .content-post {
-    background-color: var(--SECONDARY_800);
+    border-bottom: 1px solid var(--SECONDARY_800);
     margin-bottom: .5rem;
     text-align: justify;
     padding: 1rem;
@@ -61,6 +61,18 @@
 }
 
 /* --------end of content---------- */
+
+.footer-post {
+    display: flex;
+    justify-content: space-between;
+    padding: .5rem 1.5rem 0 1.5rem;
+}
+
+.footer-post p {
+    font: var(--LIGHT_ITALIC);
+}
+
+/* --------end of footer---------- */
 
 .show-more-content {
     background-color: var(--BACKGROUND_DARK);
