--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -78,7 +78,7 @@
     font-size: 1.1rem;
 }
 
-.nav-text a {
+.nav-text .item-link {
     color: var(--TEXT_LIGHT);
     display: flex;
     gap: .6rem;
@@ -86,11 +86,8 @@
     align-items: center;
 }
 
-.nav-text a:hover {
+.nav-text .item-link:hover {
     color: var(--SECONDARY_800);
-    display: flex;
-    gap: .6rem;
-    font-size: 1.1rem;
 }
 
 
@@ -127,9 +124,9 @@
         margin-top: 0;
     }
 
-    .nav-header .nav-header-input {
-        margin-top: 1.5%;
-        height: 2.3rem;
+    .nav-header .input-container {
+        margin-bottom: 0;
+        height: 2rem;
     }
 
     .nav-header .input-container input {
@@ -187,9 +184,9 @@
         padding-left: 5%;
     }
 
-    .item-link {
+    /* .item-link {
         align-items: center;
-    }
+    } */
 
     .nav-menu-items .item-searchbar .input-container {
         height: 2.3rem;
