--- a/src/components/post/Post.css
+++ b/src/components/post/Post.css
@@ -11,6 +11,20 @@
     margin-bottom: 1rem;
 }
 
+.header-post .header-user-post {
+    display: flex;
+    gap: .8rem;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: center;
+    text-align: left;
+}
+
+.header-post h3 {
+    display: flex;
+    gap: 1rem;
+}
+
 .header-content-user {
     display: flex;
     align-items: center;
@@ -43,7 +57,6 @@
 /* --------end of header---------- */
 
 .post-container .content-post {
-    border-bottom: 1px solid var(--SECONDARY_800);
     margin-bottom: .5rem;
     text-align: justify;
     padding: 1rem;
@@ -64,7 +77,7 @@
 
 .footer-post {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     padding: .5rem 1.5rem 0 1.5rem;
 }
 
@@ -106,6 +119,10 @@
         width: 75%;
         border-radius: 1rem;
         margin-left: calc((100% - 75%)/2);
+    }
+
+    .post-container .content-post {
+        border-bottom: 1px solid #049dbf63;
     }
 
     .img-content {
