tentativa de atualizar usuario

--- a/src/routes/config/Config.css
+++ b/src/routes/config/Config.css
@@ -33,6 +33,8 @@
     display: flex;
     align-items: center;
     margin-bottom: 1rem;
+    flex-wrap: wrap;
+    justify-content: center;
     gap: 1rem;
 }
 
@@ -58,15 +60,11 @@
     background: none;
 }
 
-.config-container .config-form-container .save-button {
-    width: 6rem;
-}
-
 .config-container .config-form-container .checked-boxes-container {
     border: 1px solid var(--SECONDARY_800);
     border-radius: 1rem;
     padding: 1rem;
-    font: var(--LIGHT);
+    font: var(--LIGHT_ITALIC);
     width: 100%;
     display: flex;
     justify-content: flex-start;
@@ -86,11 +84,16 @@
     width: 1.5rem;
 }
 
+.config-container .config-form-container .save-button {
+    width: 6rem;
+}
+
 .config-container .config-form-container .config-btns-container {
     margin: 2.5rem 0 1rem 0;
     padding: 0 1rem;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 1rem;
     align-items: center;
     flex-wrap: wrap;
 }
@@ -107,6 +110,16 @@
         max-width: 100%;
     }
 
+    .config-form-container .checked-boxes-container .form-checked-box {
+        /* gap: 1rem; */
+        width: 40%;
+        font-size: 1.5rem;
+    }
+
+    .config-form-container .checked-boxes-container .form-checked-box input {
+        width: 1.5rem;
+    }
+
 }
 
 @media (max-width: 475px) {
@@ -114,5 +127,25 @@
     .config-container .config-form-container .input-img-container {
         justify-content: center;
         gap: 1rem;
+    }
+
+    .config-form-container .checked-boxes-container .form-checked-box {
+        width: 45%;
+        font-size: 1rem;
+    }
+
+    .config-form-container .checked-boxes-container .form-checked-box input {
+        width: 1rem;
+    }
+}
+
+@media (max-width: 340px) {
+
+    .config-form-container .checked-boxes-container .form-checked-box {
+        width: 50%;
+    }
+
+    .config-container .config-form-container .checked-boxes-container {
+        justify-content: center;
     }
 }
