--- a/src/components/checkbox/CheckBox.css
+++ b/src/components/checkbox/CheckBox.css
@@ -1,16 +1,62 @@
-.cb-group {
+.checked-boxes-container {
+    border: 1px solid var(--SECONDARY_800);
+    border-radius: 1rem;
+    padding: 1rem;
+    font: var(--LIGHT_ITALIC);
+    width: 100%;
     display: flex;
-    height: max-content;
-    align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
+    gap: 1rem;
     flex-wrap: wrap;
-    margin: .5rem 0;
+    margin: .5rem 0 1rem 0;
 }
 
-.check-show {
-    display: block;
+.checked-boxes-container .form-checked-box {
+    display: flex;
+    gap: 1rem;
+    width: 25%;
+    font-size: 1.8rem;
 }
 
-.check-hide {
-    display: none;
+.checked-boxes-container .form-checked-box input {
+    width: 1.5rem;
+}
+
+/* MEDIA QUERYS */
+
+@media (max-width: 670px) {
+
+    .checked-boxes-container .form-checked-box {
+        /* gap: 1rem; */
+        width: 40%;
+        font-size: 1.5rem;
+    }
+
+    .checked-boxes-container .form-checked-box input {
+        width: 1.5rem;
+    }
+
+}
+
+@media (max-width: 475px) {
+
+    .checked-boxes-container .form-checked-box {
+        width: 45%;
+        font-size: 1rem;
+    }
+
+    .checked-boxes-container .form-checked-box input {
+        width: 1rem;
+    }
+}
+
+@media (max-width: 340px) {
+
+    .checked-boxes-container .form-checked-box {
+        width: 50%;
+    }
+
+    .checked-boxes-container {
+        justify-content: center;
+    }
 }
