--- a/src/routes/changeinfuser/Global.css
+++ b/src/routes/changeinfuser/Global.css
@@ -1,3 +1,14 @@
+.container {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
 .change-container {
     min-height: 100vh;
     display: flex;
