--- a/src/components/post/Post.css
+++ b/src/components/post/Post.css
@@ -32,7 +32,7 @@
     margin-left: 1rem;
 }
 
-.header-content-user P {
+.header-content-user p {
     font: var(--REGULAR);
     cursor: pointer;
 }
@@ -68,9 +68,58 @@
     margin-top: .5rem;
 }
 
-.img-content {
+.img-content-container img {
     width: 70%;
     object-fit: cover;
+}
+
+/* modal  */
+.modal {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #000000d9;
+    transition: opacity .4s ease, visibility .4s ease, transform .5s ease-in-out;
+    visibility: hidden;
+    opacity: 0;
+    transform: calc(0);
+    overflow: hidden;
+    z-index: 999;
+}
+
+.modal.open {
+    visibility: visible;
+    opacity: 1;
+    transform: scale(1);
+}
+
+.modal img {
+    width: auto;
+    max-width: 100%;
+    height: auto;
+    max-height: 100%;
+    display: block;
+    line-height: 0;
+    box-sizing: border-box;
+    padding: 2rem 0 2rem;
+    padding: 0 auto;
+}
+
+.modal svg {
+    position: fixed;
+    top: 2rem;
+    right: 2rem;
+    width: 2rem;
+    height: 2rem;
+    padding: .8rem;
+    color: var(--TEXT_LIGHT);
+    font-size: 3rem;
+    cursor: pointer;
 }
 
 /* --------end of content---------- */
@@ -91,20 +140,29 @@
     background-color: var(--BACKGROUND_DARK);
     border-radius: 1rem;
     padding: .5rem;
-    position: absolute;
-    right: 2rem;
+    position: relative;
+    /* right: 2rem; */
     z-index: 2;
     border: 1px solid var(--SECONDARY_900);
     display: block;
     transition: var(--transition);
+    transition: opacity .4s ease, visibility .4s ease, transform .5s ease-in-out;
+    visibility: hidden;
+    opacity: 0;
+    transform: calc(0);
+    overflow: hidden;
+    z-index: 999;
 }
 
-.show-more-content-active {
-    display: none;
-    transition: var(--transition);
+.show-more-content.show-more-content-active {
+    /* display: none;
+    transition: var(--transition); */
+    visibility: visible;
+    opacity: 1;
+    transform: scale(1);
 }
 
-.header-show-more .show-more-content li {
+.show-more-content div {
     border-bottom: 1px solid var(--SECONDARY_900);
     padding: .2rem;
     border-radius: .2rem;
