--- a/src/index.css
+++ b/src/index.css
@@ -139,6 +139,13 @@ a:hover {
   display: block;
 }
 
+/* login and register links */
+@media (max-width: 821px) {
+  .footer .label .colorfull-text {
+    font-size: 1rem;
+  }
+}
+
 
 /*==============================
         POPUP STYLE
@@ -237,6 +244,73 @@ a:hover {
   color: var(--TEXT_LIGHT);
   cursor: pointer;
   font-size: 3rem;
+}
+
+
+/*===============
+  CHECKBOXES STYLE
+=================*/
+.checked-boxes-container {
+  border: 1px solid var(--SECONDARY_800);
+  border-radius: 1rem;
+  padding: 1rem;
+  font: var(--LIGHT_ITALIC);
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  gap: 1rem;
+  flex-wrap: wrap;
+  margin: .5rem 0 1rem 0;
+}
+
+.checked-boxes-container .form-checked-box {
+  display: flex;
+  gap: 1rem;
+  width: 25%;
+  font-size: 1.8rem;
+}
+
+.checked-boxes-container .form-checked-box input {
+  width: 1.5rem;
+}
+
+/* MEDIA QUERYS */
+
+@media (max-width: 670px) {
+
+  .checked-boxes-container .form-checked-box {
+    /* gap: 1rem; */
+    width: 40%;
+    font-size: 1.5rem;
+  }
+
+  .checked-boxes-container .form-checked-box input {
+    width: 1.5rem;
+  }
+
+}
+
+@media (max-width: 475px) {
+
+  .checked-boxes-container .form-checked-box {
+    width: 45%;
+    font-size: 1rem;
+  }
+
+  .checked-boxes-container .form-checked-box input {
+    width: 1rem;
+  }
+}
+
+@media (max-width: 340px) {
+
+  .checked-boxes-container .form-checked-box {
+    width: 50%;
+  }
+
+  .checked-boxes-container {
+    justify-content: center;
+  }
 }
 
 
