--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -53,6 +53,8 @@
 
 .result-avatar-container {
     width: 2rem;
+    height: 2rem;
+    border-radius: 50%;
 }
 
 /* ------------ END RESULT OF RESEARCH CONTAINER ----------- */
@@ -153,7 +155,7 @@
         height: 100vh;
         width: 100%;
         top: 0;
-        right:0 ;
+        right: 0;
         background: #22457375;
         backdrop-filter: blur(15px);
         transition: var(--transition);
