--- a/src/index.css
+++ b/src/index.css
@@ -264,6 +264,10 @@ a:hover {
   align-items: center;
 }
 
+.aa {
+  margin-top: 17vh;
+}
+
 .aaa {
   position: absolute;
   top: 10vh;
@@ -277,12 +281,6 @@ a:hover {
   }
 }
 
-@media (max-width: 670px) {
-  .aa {
-    margin-top: 1rem;
-  }
-
-}
 
 /*===============
   CHECKBOXES STYLE
