feats: requisitos da document. finalizados p/ test

--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -27,6 +27,11 @@
     border: solid 1.5px var(--SECONDARY_900);
 }
 
+.disable {
+    background-color: #049dbf70;
+    border: solid 1.5px var(--SECONDARY_900);
+}
+
 .google {
     background-color: var(--TEXT_LIGHT);
     border: solid 1.5px var(--SECONDARY_800);
