--- a/src/index.css
+++ b/src/index.css
@@ -139,6 +139,11 @@ a:hover {
   display: block;
 }
 
+.input-warning {
+  color: var(--WARNING);
+  text-align: justify;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
@@ -182,7 +187,6 @@ a:hover {
 .popup-container {
   width: auto;
   max-width: 100%;
-  min-width: 25rem;
   height: auto;
   max-height: 100%;
   background-color: var(--BACKGROUND_DARK);
@@ -190,9 +194,25 @@ a:hover {
   display: flex;
   flex-direction: column;
   text-align: center;
-  padding: 2rem 1rem;
-  margin: 0 .8rem;
+  padding: 2rem;
+  transition: var(--transition);
+}
+
+.popup-container:hover {
   box-shadow: 1px 1px 5px var(--SECONDARY_700);
+}
+
+.popup-container form {
+  padding: 1.8rem 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5rem;
+}
+
+.popup-container input {
+  color: var(--TEXT_LIGHT);
 }
 
 .btns-popup {
@@ -216,7 +236,8 @@ a:hover {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #000000d9;
+  background: #22457357;
+  backdrop-filter: blur(15px);
   transition: opacity .4s ease, visibility .4s ease, transform .5s ease-in-out;
   visibility: hidden;
   opacity: 0;
@@ -239,6 +260,8 @@ a:hover {
   display: block;
   padding: 2rem 0 2rem;
   padding: 0 auto;
+  border-radius: 1rem;
+  overflow-y: auto;
 }
 
 .modal svg {
