--- a/src/routes/changeinfuser/Global.css
+++ b/src/routes/changeinfuser/Global.css
@@ -1,4 +1,4 @@
-.container {
+.change-container {
     height: 100vh;
     width: 100vw;
     display: flex;
@@ -7,20 +7,13 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    overflow-y: auto;
+    padding: 1rem;
 }
 
-.container .not-found-title {
+.canche-container .not-found-title {
     font-size: 5rem;
     color: var(--ALERT);
-}
-
-.change-container {
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 14px;
 }
 
 .change-container .back-icon {
@@ -32,19 +25,18 @@
 }
 
 .img-container {
-    width: 7rem;
-    height: 7rem;
+    /* width: 7rem;
+    height: 7rem; */
+    margin-top: 15vh;
 }
 
 .img-container img {
     width: 100%;
     height: 100%;
+    width: 7rem;
+    height: 7rem;
     object-fit: cover;
     border-radius: 50%;
-}
-
-.title {
-    margin-bottom: 1.5rem;
 }
 
 .form {
